--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-browser": "^4.21.0",
+    "@azure/msal-react": "^3.0.19",
     "@radix-ui/react-icons": "^1.3.2",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-is": "^19.1.1",
+    "react-router-dom": "^7.8.1",
     "recharts": "^3.1.2",
     "tailwind-variants": "^2.1.0"
   },
